tests/pp-fail/bad_elif.fl.0.exp
Error: bad_elif.fl(1,1): Unexpected \elif directive
\elif
^     
